# frappe_xpress

./: .gitignore  README.md  pyproject.toml
frappe_xpress/: hooks.py  modules.txt
frappe_xpress/config/: desktop.py  docs.py
